--- a/src/CharSelect.mxml
+++ b/src/CharSelect.mxml
@@ -23,6 +23,8 @@
 	</fx:Style>
 	<fx:Script>
 		<![CDATA[
+			import components.BtnCharSimple;
+			
 			import data.ConfigProperties;
 			
 			import mx.events.FlexEvent;
@@ -262,13 +264,13 @@
 				{
 					if(String(files[i].name).search(".")>-1)
 					{
-						var tmpBtn:BtnChar = new BtnChar()
+						var tmpBtn:BtnCharSimple = new BtnCharSimple()
 						tmpBtn.id = files[i].name+"Btn"
 						tmpBtn.label = files[i].name
 						tmpBtn.width = 200
 						tmpBtn.height = 256
 						tmpBtn.addEventListener(MouseEvent.CLICK, selectChar);
-						var firstFile:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/Chars/"+files[i].name)
+						/* var firstFile:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/Chars/"+files[i].name)
 						var firstFileArrTemp:Array = firstFile.getDirectoryListing()
 						
 						var firstFileArr:Array = new Array();
@@ -285,7 +287,7 @@
 							if(firstFile.creationDate<firstFileArr[z].creationDate)
 								firstFile = firstFileArr[z]
 						}
-						tmpBtn.setData(firstFile.nativePath)
+						tmpBtn.setData(firstFile.nativePath) */
 						this.chars.addChar(tmpBtn)
 						
 					}
@@ -532,15 +534,17 @@
 				 color="#FDFCFC" fontFamily="MorrisRomanBlack" verticalAlign="middle" verticalCenter="0" filters="{shadow}"/>
 		
 	</s:VGroup>
-	<s:VGroup height="100%" width="100%">
-		<s:TextArea includeIn="use" borderVisible="false" color="#FDF9F9" width="100%" top="0"
-				contentBackgroundAlpha="0.0" contentBackgroundColor="#726B6B" editable="false" selectable="false" fontSize="24"
-				text="select Character:" textAlign="center" verticalAlign="middle" fontFamily="BaseFont" filters="{shadow}" />
+	<s:VGroup width="100%" height="100%" horizontalCenter="0" verticalCenter="0"
+			  horizontalAlign.use="center" verticalAlign.use="middle">
+		<s:TextArea includeIn="use" top="0" width="100%" height="50" borderVisible="false"
+					color="#FDF9F9" contentBackgroundAlpha="0.0" contentBackgroundColor="#726B6B"
+					editable="false" filters="{shadow}" fontFamily="BaseFont" fontSize="24"
+					selectable="false" text="select Character:" textAlign="center"
+					verticalAlign="middle"/>
 		<components:CharSlider id="chars" includeIn="use" width="100%" />
-		<s:Label id="labelText" fontSize="16" textAlign="center" visible="true" includeIn="use" filters="{shadow}"
-				 color="#FDFCFC" fontFamily="BaseFont" bottom="140"
-				 horizontalCenter="0" 
-				 verticalAlign="middle"/>
+		<s:Label id="labelText" includeIn="use" visible="true" bottom="140" width="100%"
+				 color="#FDFCFC" filters="{shadow}" fontFamily="BaseFont" fontSize="16"
+				 horizontalCenter="0" textAlign="center" verticalAlign="middle"/>
 	</s:VGroup>
 	
 	<s:HGroup bottom="10" horizontalCenter="0" id="pathTool"
