--- a/src/components/BtnCharSimple.mxml
+++ b/src/components/BtnCharSimple.mxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" creationComplete="initComponet(event)" xmlns:components="components.*" xmlns:w8ui="components.w8ui.*">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" creationComplete="initComponet(event)">
 	<fx:Script>
 		<![CDATA[
-			import data.CharData;
-			
 			import flash.filters.*;
 			
 			import mx.events.FlexEvent; 
-			
-			private var myBlur:BlurFilter = new BlurFilter();
 			
 			public function set label(value:String):void
 			{
@@ -19,7 +15,7 @@
 				myGlow.blurX = 2
 				myGlow.blurY = 2
 				//myGlow.color = 0xFFFFFF
-				//this.testo.filters = [myGlow]
+				this.testo.filters = [myGlow]
 			}
 			
 			public function get label():String
@@ -47,17 +43,14 @@
 				var myGlow:GlowFilter = new GlowFilter();
 				myGlow.color = 0xFFFFFF
 				
-				//this.filters = [myGlow];
-				img.filters = [];
+				this.filters = [myGlow];
 			}
 			
 			private function rollOutEvent(eve:MouseEvent):void
 			{
 				
-				myBlur.blurX = 2
-				myBlur.blurY = 2
-				myBlur.quality = BitmapFilterQuality.HIGH
-				//img.filters = [myBlur];
+				
+				
 				this.filters = [];
 			}
 			
@@ -66,26 +59,13 @@
 			{
 				
 				img.source = value
-				myBlur.blurX = 2
-				myBlur.blurY = 2
-				myBlur.quality = BitmapFilterQuality.HIGH
-				//img.filters = [myBlur];
-				this.filters = [];
-			}
-			
-			public function setData(fileName:String):void
-			{
-				var newFile:File = new File(fileName)
-				var charData:CharData = new CharData(newFile)
-				charUi.setData(newFile)
 				
 			}
 			
 		]]>
 	</fx:Script>
 	
-	<s:BitmapImage id="img" width="100%" height="100%" smooth="true" smoothingQuality="high" visible="false"/>
-	<s:Label id="testo" left="0" right="0" verticalCenter="0" color="#ffffff" fontFamily="BaseFont"
-			 fontSize="24" textAlign="center" visible="false"/>
-	<w8ui:CharUI id="charUi"/>
+	<s:BitmapImage id="img" width="100%" height="100%" smooth="true" smoothingQuality="high"/>
+	<s:Label id="testo" left="0" right="0" bottom="10" color="#ffffff" fontFamily="BaseFont"
+			 fontSize="24" textAlign="center"/>
 </s:Group>
