--- a/src/components/BtnSimple.mxml
+++ b/src/components/BtnSimple.mxml
@@ -25,8 +25,8 @@
 	]]>
 	</fx:Script>
 	<s:TextArea width="20" 
-				height="20" borderColor="#000000" color="#000000"
-				contentBackgroundColor="#726B6B" editable="false" selectable="false" />
+				height="20" borderColor="#ffffff" color="#ffffff"
+				contentBackgroundColor="#726B6B" editable="false" selectable="false" contentBackgroundAlpha="0"/>
 	<s:BitmapImage id="img" width="100%" height="100%" smooth="true" smoothingQuality="high" />
 	
 </s:Group>
