--- a/src/components/CharSlider.mxml
+++ b/src/components/CharSlider.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" creationComplete="initComp()">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" creationComplete="initComp()" height="300" width="100%">
 	
 	<fx:Script>
 		<![CDATA[
@@ -117,20 +117,23 @@
 		<s:Move id="myMoveRight" target="{charsSlider}" />
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Group width="100%" height="200">
+	
 		
-	<s:HGroup id="charsSlider" width="90%" height="100%" x="0"  horizontalAlign="center" gap="20" />
+	<s:HGroup id="charsSlider" width="100%" height="100%" gap="20" horizontalAlign="center"
+			  horizontalCenter="0" verticalAlign="middle" verticalCenter="0"/>
 		
 
-	<s:TextArea id="leftBtn" width="100" height="100%" left="0" fontSize="120" text="" contentBackgroundColor="#ff0000" borderVisible="true"
-				verticalAlign="middle" fontFamily="BaseFont" color="#ffffff" mouseOut="stopRight(event)" 
-				contentBackgroundAlpha="1" mouseOver="rigthBtn_mouseUpHandler(event)" 
-				selectable="false" editable="false"
-				visible="false"/>
+	<s:TextArea id="leftBtn" visible="false" left="0" width="100" height="100%" borderVisible="true"
+				color="#ff0000" contentBackgroundAlpha="1" contentBackgroundColor="#ff0000"
+				editable="false" fontFamily="BaseFont" fontSize="120" mouseOut="stopRight(event)"
+				mouseOver="rigthBtn_mouseUpHandler(event)" selectable="false" text="123"
+				verticalAlign="middle" verticalCenter="0"/>	
 	
-	<s:TextArea id="rigthBtn" width="100" height="100%" right="0" fontSize="120" text="" contentBackgroundColor="#ff0000" borderVisible="true"
-				verticalAlign="middle" fontFamily="BaseFont" textAlign="right" color="#ffffff" 
-				mouseOut="stopLeft(event)" contentBackgroundAlpha="0" mouseOver="leftBtn_mouseUpHandler(event)" selectable="false" editable="false"
-				visible="false"/>
-	</s:Group>
+	<s:TextArea id="rigthBtn" visible="false" right="0" width="100" height="100%"
+				borderVisible="true" color="#ff0000" contentBackgroundAlpha="0"
+				contentBackgroundColor="#ff0000" editable="false" fontFamily="BaseFont"
+				fontSize="120" mouseOut="stopLeft(event)" mouseOver="leftBtn_mouseUpHandler(event)"
+				selectable="false" text="right" textAlign="right" verticalAlign="middle"
+				verticalCenter="0"/>
+
 </s:Group>
