--- a/src/components/w8ui/ListChar.mxml
+++ b/src/components/w8ui/ListChar.mxml
@@ -9,6 +9,7 @@
 			import spark.events.IndexChangeEvent;
 			private var dp:ArrayList
 			private var _clickOnName:Boolean = false;
+			public var selectedName:String;
 			
 			[Bindable(event="CLICK_ON_NAME")]
 			public function get clickOnName():Boolean
@@ -34,16 +35,20 @@
 			{
 				var item:* = list.dataProvider.getItemAt(evt.newIndex);
 				trace(item.nome)
+				selectedName = item.nome
 				_clickOnName = true
+				this.dispatchEvent(new Event('CLICK_ON_NAME'))
+				
 			}
+			
 			
 		]]>
 	</fx:Script>
-	<s:List id="list" changing="selectionChangingHandler(event);" contentBackgroundAlpha="0" selectionColor="{null}" rollOverColor="{null}">
+	<s:List id="list" changing="selectionChangingHandler(event);" width="100%" contentBackgroundAlpha="0" borderAlpha="0" borderVisible="false">
 		<!-- itemRenderer is inline in this sample -->
 		<s:itemRenderer>
 			<fx:Component>
-				<s:ItemRenderer>
+				<s:ItemRenderer autoDrawBackground="false" >
 					<s:states>
 						<s:State name="normal" />
 						<s:State name="hovered" />
@@ -51,25 +56,16 @@
 					</s:states>
 					<s:Rect left="0" right="0" top="0" bottom="0">
 						<s:fill>
-							<s:SolidColor color="0x999999" alpha.normal="0" alpha.hovered="0" alpha.selected="0" />
+							<s:SolidColor color="#008286" alpha.normal="0" alpha.hovered="1" alpha.selected="1" />
 						</s:fill>
-						<s:stroke>
-							<s:SolidColorStroke color="#000000" />
-						</s:stroke>
+						<!--<s:stroke>
+							<s:SolidColorStroke color="#000000" alpha="1" weight="1"/>
+						</s:stroke>-->
 					</s:Rect>
-					<s:BitmapImage id="bgImg" scaleMode="zoom" smooth="true" smoothingQuality="high" rotation="90" visible.normal="false" right="-5" visible.hovered="true" visible.selected="true" scaleY="-1" top="1" width="30" height="30" source.normal="{null}" source.hovered="{'file://'+File.applicationDirectory.nativePath+'/assets/arrow.png'}" source.selected="{'file://'+File.applicationDirectory.nativePath+'/assets/arrow.png'}" />
-					<s:Label verticalAlign="middle" top="5" left="5" right="5" bottom="5" id="nameLabel"  text="{data.nome}" fontFamily="MorrisRomanBlack" fontSize="18" width="100%" color="#ffffff"/>
+					<!--<s:BitmapImage id="bgImg" scaleMode="zoom" smooth="true" smoothingQuality="high" rotation="90" visible.normal="false" visible.hovered="true" visible.selected="true" scaleY="-1" top="1" left="100" width="30" height="30" source.normal="{null}" source.hovered="{'file://'+File.applicationDirectory.nativePath+'/assets/arrow.png'}" source.selected="{'file://'+File.applicationDirectory.nativePath+'/assets/arrow.png'}" />-->
+					<s:Label verticalAlign="middle" top="5" left="5" right="5" bottom="5" id="nameLabel"  text="{data.nome}" fontFamily="Segoeui" fontSize="20" width="100%" color="#ffffff"/>
 				</s:ItemRenderer>
 			</fx:Component>
 		</s:itemRenderer>
-		<!--<s:dataProvider>
-			<s:ArrayList>
-				<fx:Object type="hr" firstName="Ann"  lastName="Green"  />
-				<fx:Object type="employee" firstName="Tom"  lastName="Smith" phone="415-155-1212" />
-				<fx:Object type="employee" firstName="John" lastName="Black" phone="408-344-1234" />
-				<fx:Object type="employee" firstName="Jane" lastName="White" phone="415-235-7878" />
-				<fx:Object type="employee" firstName="Bill" lastName="Jones" phone="415-875-7800" />
-			</s:ArrayList>
-		</s:dataProvider>-->
 	</s:List>
 </s:VGroup>
